# asset-gen-tool

./: .firebaserc  .gitignore  Arcade AssetGen Auth & Authorization Strategy.txt  Firestore Entity Model for Arcade AssetGen (Multi‑Tenant Backend).txt  Makefile  README.md  firebase.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  requirements.uv.txt  vercel.json
.github/workflows/: firestore-emulator.yml
api/: __init__.py  firebase.py  index.py  models.py
app/: layout.tsx
app/accept-invite/: page.tsx
app/dashboard/: page.tsx
app/login/: page.tsx
app/org/[orgId]/: layout.tsx  page.tsx
app/org/[orgId]/invite/: page.tsx
app/org/[orgId]/members/: page.tsx
app/org/[orgId]/projects/: page.tsx
app/org/[orgId]/projects/[projectId]/: layout.tsx  page.tsx
app/org/[orgId]/projects/[projectId]/assets/: page.tsx
app/org/[orgId]/projects/[projectId]/assets/[assetId]/: page.tsx
app/org/[orgId]/projects/[projectId]/assets/[assetId]/variants/: page.tsx
app/org/[orgId]/projects/[projectId]/assets/new/: page.tsx
app/org/[orgId]/projects/[projectId]/concepts/: page.tsx
app/org/[orgId]/projects/[projectId]/concepts/[conceptId]/: page.tsx
app/org/[orgId]/projects/[projectId]/concepts/new/: page.tsx
app/org/[orgId]/projects/[projectId]/generate/: page.tsx
app/org/[orgId]/projects/[projectId]/manifest/: page.tsx
app/org/[orgId]/projects/[projectId]/settings/: page.tsx
app/org/[orgId]/projects/[projectId]/themes/: page.tsx
app/org/[orgId]/projects/[projectId]/themes/[themeId]/: page.tsx
app/org/[orgId]/projects/[projectId]/themes/new/: page.tsx
app/org/[orgId]/projects/new/: page.tsx
app/org/[orgId]/settings/: page.tsx
app/org/new/: page.tsx
app/profile/: page.tsx
app/signup/: page.tsx
asset_gen_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
components/: sidebar.tsx
components/ui/: icon.tsx
lib/: api.ts  nav.ts
scripts/: check-python-deps.sh  export_openapi.py
tests/: conftest.py  test_firestore_accessor.py
tests/firestore/: conftest.py  test_assets.py  test_concept_images.py  test_generations.py  test_organizations.py  test_projects.py  test_transactions.py  test_users.py  test_variants.py
types/: nav.ts
