[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asset-gen-tool"
version = "0.1.0"
description = "Asset generation tooling with a Next.js frontend and FastAPI backend."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "annotated-types==0.7.0",
  "anyio==3.7.1",
  "certifi==2024.7.4",
  "charset-normalizer==3.4.0",
  "click==8.1.7",
  "distro==1.9.0",
  "dnspython==2.6.1",
  "email-validator==2.2.0",
  "fastapi==0.103.2",
  "fastapi-cli==0.0.4",
  "google-cloud-firestore==2.16.0",
  "google-cloud-storage==2.17.0",
  "h11==0.14.0",
  "httpcore==1.0.5",
  "httpx==0.27.0",
  "idna==3.7",
  "jinja2==3.1.4",
  "markdown-it-py==3.0.0",
  "markupsafe==2.1.5",
  "mdurl==0.1.2",
  "openai==1.37.1",
  "pydantic==2.7.4",
  "pygments==2.18.0",
  "python-dotenv==1.0.1",
  "python-multipart==0.0.9",
  "pyyaml==6.0.1",
  "requests==2.32.3",
  "rich==13.7.1",
  "shellingham==1.5.4",
  "sniffio==1.3.1",
  "starlette==0.27.0",
  "tqdm==4.66.4",
  "typer==0.12.3",
  "typing-extensions==4.12.2",
  "urllib3==2.2.3",
  "uvicorn==0.30.3",
  "websockets==12.0",
]

[project.optional-dependencies]
dev = [
  "black==23.9.1",
  "isort==5.12.0",
  "mypy==1.8.0",
  "pytest==8.2.2",
  "ruff==0.4.5",
]

[tool.setuptools.packages.find]
include = ["api", "api.*"]

# Formatting / linting defaults to keep repository consistent.
[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C", "N", "I", "RUF"]

[tool.mypy]
python_version = 3.12
warn_unused_configs = true
ignore_missing_imports = true
allow_redefinition = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
filterwarnings = [
  "ignore:Type google._upb._message.MessageMapContainer uses PyType_Spec:DeprecationWarning",
  "ignore:Type google._upb._message.ScalarMapContainer uses PyType_Spec:DeprecationWarning",
  "ignore:Failing to pass a value to the 'type_params'.*:DeprecationWarning",
]

[tool.pre-commit]
repos = [
  { repo = "https://github.com/psf/black", rev = "23.9.1", hooks = [{ id = "black" }] },
  { repo = "https://github.com/pycqa/isort", rev = "5.12.0", hooks = [{ id = "isort" }] },
  { repo = "https://github.com/charliermarsh/ruff-pre-commit", rev = "v0.4.5", hooks = [{ id = "ruff" }] }
]

# Notes
# - Runtime dependencies live in [project].dependencies so platforms like Vercel can install the app via pip/uv.
# - For local development, create a Python 3.12 virtualenv and install the package in editable mode:
#     python3.12 -m venv .venv
#     .venv/bin/pip install -e ".[dev]"
# - Keep dev-only tools in the optional "dev" extra to avoid bloating serverless deployments.
